# FTP-Server-Operating-Systems

./: CMakeLists.txt
c1/: client
c2/: client
c3/: client
client/: 1.h  Makefile  client  client.c  client.h  main.c  t.txt
server/: Makefile  log  main.c  s.html  server  server.c  server.h
server/files/: t3.txt
tools/: tools.c
